# stock-toolkit

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .ruff.toml  LICENSE  README.md  README_FIRST_HUMAN.md  compose.yaml
.github/workflows/: build-windows-exe.yml
docker/: Dockerfile  README.md  crontab
docker/entrypoints/: maintenance.sh
pyApi/: .gitignore  ANALYSIS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  DEVELOPING.md  QUICKSTART.md  QUICKSTART_DEV.md  README.md  README_ALERTS.md  README_BACKTEST.md  README_SCORE.md  SCHEMA.md  START_HERE.md  alerts  analyse  backtest  collect  crontab.demo  example_contab.txt  install.sh  inventory  make_dist.py  make_docs.py  myCron.txt  pyproject.toml  requirements.txt  score  startUI.sh  stock_alerts.py  stock_analysis.py  stock_backtest.py  stock_collector.py  stock_common.py  stock_inventory.py  stock_score.py  stock_setup.py  stock_ui.py  test_live_apis.py  test_toolkit.py
pyApi/pyinstaller/: README.md  StockToolkit.spec  launcher.py
pyApi/stock_toolkit/: __init__.py  alerts.py  analysis.py  backtest.py  backup.py  bootstrap.py  common.py  fundamentals.py  game.py  gap_fill.py  inventory.py  news.py  sanity.py  sanity_cli.py  score.py  score_validation.py  setup_wizard.py
pyApi/stock_toolkit/collector/: __init__.py  cli.py  config.py  db.py  engine.py  failures.py  historical.py  http.py  plotting.py  state.py
pyApi/stock_toolkit/collector/sources/: __init__.py  alphavantage.py  finnhub.py  fmp.py  marketstack.py  polygon.py  twelvedata.py  yfinance.py
pyApi/stock_toolkit/ui/: __init__.py  admin.py  app.py  charts.py  game.py  help.py  helpers.py  icons.py  theme.py
pyApi/stock_toolkit/ui/pages/: 01_⚙️_Admin.py  02_🎮_Game.py  03_❓_Help.py
pyApi/stock_toolkit/ui/tabs/: __init__.py  alerts.py  analysis.py  backtest.py  briefing.py  collect.py  score.py
pyApi/tests/: test_alerts_notifiers.py  test_analysis_cli.py  test_audit_log.py  test_backtest_cli.py  test_backup.py  test_backup_cli.py  test_charts.py  test_cli_coverage.py  test_collector_db.py  test_collector_units.py  test_engine_rust.py  test_game.py  test_gap_fill.py  test_journey.py  test_live_apis.py  test_news.py  test_plotting.py  test_sanity.py  test_score_validation.py  test_setup_wizard.py  test_sources.py  test_toolkit.py  test_ui.py
pyApi/tests/fixtures/: news_sentiment_aapl.json
pyApi/tests/journey_yfinance/: yfinance.py
rust-fetcher/: .gitignore  Cargo.toml  README.md
rust-fetcher/src/: config.rs  db.rs  lib.rs  main.rs  rate_limit.rs  state.rs
rust-fetcher/src/sources/: alphavantage.rs  mod.rs
rust-fetcher/tests/: integration_test.rs
