[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-toolkit"
description = "Stock market data toolkit: collection, analysis, scoring, backtesting, alerting, and a Streamlit dashboard"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "requests>=2.31.0",
    "yfinance>=0.2.40",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
docs = ["pdoc>=14.0.0", "pylint>=3.0.0"]

[project.scripts]
stock-collect   = "stock_toolkit.collector.cli:main"
stock-analyse   = "stock_toolkit.analysis:main"
stock-score     = "stock_toolkit.score:main"
stock-backtest  = "stock_toolkit.backtest:main"
stock-alerts    = "stock_toolkit.alerts:main"
stock-inventory = "stock_toolkit.inventory:main"
stock-setup     = "stock_toolkit.setup_wizard:main"
stock-ui        = "stock_toolkit.ui:main"
stock-bootstrap = "stock_toolkit.bootstrap:main"
stock-gap-fill  = "stock_toolkit.gap_fill:main"

# Auto-discover every stock_toolkit subpackage. The explicit list this
# replaced silently dropped stock_toolkit.ui.tabs after the UI was split,
# which broke non-editable installs (the Docker image, dist tarballs,
# anyone running `pip install .`) — editable installs masked it because
# they resolve everything from the source tree at import time.
[tool.setuptools.packages.find]
where = ["."]
include = ["stock_toolkit*"]

[tool.setuptools.dynamic]
version = { file = "VERSION" }
